<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_marginRight="@dimen/range_padding"
        android:layout_marginLeft="@dimen/range_padding"
        android:layout_marginTop="100dp"
        android:paddingLeft="@dimen/range_margin_left"
        android:paddingRight="@dimen/range_margin_left"
        android:layout_width="match_parent"
        android:layout_height="@dimen/range_frame_height"
        android:background="@drawable/range_frame"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_unit"
            android:textColor="#444444"
            android:textSize="19sp"
            android:layout_centerVertical="true"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/switch_button_frame"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/fragment_unit_mmol"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/switch_button_normal"
                android:text="@string/unit_mmol"
                android:textColor="@color/blue"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/fragment_unit_mg"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/unit_mg"
                android:textColor="@color/white"
                android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    <TextView
        android:id="@+id/fragment_target_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:layout_alignParentTop="true"
        android:background="@drawable/title"
        android:gravity="center"
        android:text="@string/settings_item_unit"
        android:textColor="@color/title"
        android:textSize="@dimen/title_text_size" />
</RelativeLayout>