<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/setting_list_user"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/tv_glucose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/glucose_testing_strips"
        android:textColor="#000000" />

    <RelativeLayout
        android:id="@+id/rel_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_glucose"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/img_bottle"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/scanning_bottle" />

        <TextView
            android:id="@+id/tv_manufactured"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img_bottle"
            android:text="@string/opened"
            android:textColor="@color/text_1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_manufactured_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_manufactured"
            android:layout_toRightOf="@id/tv_manufactured"
            android:textColor="@color/text_1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_manufactured"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img_bottle"
            android:text="@string/valid_till"
            android:textColor="@color/text_1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_valid_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_valid"
            android:layout_toRightOf="@id/tv_valid"
            android:textColor="@color/text_1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_strips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_valid"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img_bottle"
            android:text="@string/number_of_strips"
            android:textColor="@color/text_1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_strips_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_strips"
            android:layout_toRightOf="@id/tv_strips"
            android:textColor="@color/text_1"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rel_txt"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_ok"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/btn_ok"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_gray_cancel"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        android:textSize="20sp" />
</RelativeLayout>